--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "18.2.0",
     "react-native": "0.71.0",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-linear-gradient": "2.8.3",
     "react-native-permissions": "^5.1.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "3.35.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "3.6.10"
   },
